# rayburn_personal_website

./: .gitignore  BLOG_SETUP.md  BLOG_SUPABASE_SETUP.md  CONTACT_FORM_SETUP.md  index.html  setup_rls_policies.sql
.github/workflows/: deploy.yml
assets/: about_page_min-f76a8e60ad1fbf3b.JPG.br  favicon-fe709abd2b6bd213.ico.br  tailwind-83f823c0cc9957b4.css  tailwind-83f823c0cc9957b4.css.br  web-3df36c0fa187ebc3.js  web-5927e4e692d2bdc0.js  web-5927e4e692d2bdc0.js.br  web-69c1fa428a31995d.js  web-69c1fa428a31995d.js.br  web_bg-c7841f4888fe1ce2.wasm  web_bg-c7841f4888fe1ce2.wasm.br  web_bg-d2ac2e3f76393412.wasm  web_bg-d2ac2e3f76393412.wasm.br  web_bg-f6374face48252a0.wasm
migrations/: 001_initial.sql  002_contact_submissions.sql  003_blog_posts.sql
web/: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json  package.json  tailwind.css
web/assets/: tailwind.css
web/index/assets/: Headshot_Rayburn-ef165cdb018946fe.PNG.br  web-3df36c0fa187ebc3.js.br  web_bg-f6374face48252a0.wasm.br
web/src/: compat.rs  main.rs
web/src/api/: auth.rs  blog.rs  contact.rs  database.rs  env.rs  mod.rs  projects.rs
web/src/api/auth/: auth.rs  mod.rs  native_impl.rs  wasm_impl.rs
web/src/components/: auth.rs  footer.rs  input.rs  mod.rs  modal.rs
web/src/views/: about.rs  blog.rs  blog_by_id.rs  callback.rs  contact.rs  home.rs  layout.rs  login.rs  mod.rs  navbar.rs  projects.rs  protected.rs  resume.rs  routes.rs
