[package]
name = "web"
version = "0.1.0"
authors = ["RayburnCode <rayburncode@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
gloo = "0.11.0"
gloo-timers = { version = "0.3", features = ["futures"] }
dioxus-signals = "0.6.3"
serde = "1.0.219"
chrono = "0.4.41"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
tokio = { version = "1.46.1", features = ["rt", "macros", "time"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
supabase-js-rs = "0.1.3"
tracing = "0.1.41"
wasm-bindgen = "0.2.100"
envy = "0.4.2"
dotenv = "0.15.0"
lazy_static = "1.5.0"
serde_urlencoded = "0.7.1"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
