[package]
name = "web"
version = "0.1.0"
authors = ["RayburnCode <rayburncode@gmail.com>"]
edition = "2021"

[dependencies]
# Core dependencies
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-signals = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
lazy_static = "1.5.0"

# Async runtime (basic features for all targets)
tokio = { version = "1.46.1", features = ["rt", "macros", "time"], default-features = false }

# Web dependencies (available for all targets, with conditional features)
js-sys = { version = "0.3.70", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = ["Window", "Request", "Response", "Navigator"], optional = true }
gloo = { version = "0.11.0", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
instant = { version = "0.1.13", features = ["wasm-bindgen"], optional = true }
tracing-wasm = { version = "0.2.1", optional = true }
supabase-js-rs = { version = "0.1.3", features = [], optional = true }
reqwest = { version = "0.12.22", default-features = false, features = ["json"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.70"
web-sys = { version = "0.3.77", features = ["Window", "Request", "Response", "Navigator"] }
gloo = "0.11.0"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
tracing-wasm = "0.2.1"
supabase-js-rs = { version = "0.1.3", features = [] }
serde_urlencoded = "0.7.1"

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "net", "fs"] }
envy = "0.4.2"
dotenv = "0.15.0"
serde_urlencoded = "0.7.1"
postgrest = "1.6.0"

[features]
default = ["web"]
web = ["dioxus/web", "wasm-bindgen", "wasm-bindgen-futures", "web-sys", "gloo", "gloo-timers", "serde-wasm-bindgen", "instant", "tracing-wasm", "supabase-js-rs", "js-sys"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
